syntax = "proto3";

package fr.upec.episen;

option java_multiple_files = true;
option java_package = "fr.upec.episen.proto";

service Owner{
  rpc GetOwnerName(OwnerNameRequest) returns (OwnerNameReply){};
  rpc UpdateOwner(OwnerUpdateRequest) returns (OwnerUpdateReply){};
}

message OwnerNameRequest{
  string bikeID = 1;
}

message OwnerNameReply{
  string name = 1;
}

message OwnerUpdateRequest{
  string name = 1;
  string bikeID = 2;
}

message OwnerUpdateReply{
  string result = 1;
}